<resources>
    <string name="app_name">AskLocals</string>
    <string name="more_options">More options</string>
    <string name="button_send">Send</string>
    <string name="edit_text_hint">Type your question...</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="edit_text">Edit text</string>

    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.</string>


    <string name="BackDropBottomSheetBehavior">com.gamechangers.android.asklocals.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.gamechangers.android.asklocals.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.gamechangers.android.asklocals.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.gamechangers.android.asklocals.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.gamechangers.android.asklocals.ScrollingAppBarLayoutBehavior</string>
</resources>
